# project_ar_tracking

./: .gitignore  CMakeLists.txt  package.xml
bundles/: cage_06_07.xml  table_0_3.xml  table_10.xml
launch/: camera.launch  camera_info.launch  find_bundle_cage_06_07.launch  find_bundle_melodic.launch  find_bundle_table_0_3.launch  find_bundle_table_10.launch  pr2_bundle_no_kinect.launch  single_marker_01.launch  train_bundle.launch  webcam_camera.launch
rviz/: save_form_rviz.rviz
scripts/: driver_camera.py  filter_bag.py  filter_tf.py  publish_camera_info.py
src/: average_ar_track.cpp  filter_bag.cpp
urdf/: my_robot.urdf  one_shape.urdf  real_cage.urdf  rectangle.urdf
yaml/: rafin_calibration.yaml  rayfin_full_screen.yaml
