<?xml version="1.0"?>

<package format="2">

    <name>project_ar_tracking</name>
    <version>1.0.0</version>
    <description>Test project hiveground</description>

    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>

    <license>MIT</license>

    <author>K.Supasan</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>message_runtime</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>ar_track_alvar_msgs</build_depend>
    <exec_depend>ar_track_alvar_msgs</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

</package>
